[fix] Contact form order number should be text

--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -32,7 +32,7 @@
         .row
           .col-md-12.form-group
             label Order Number (if you have one)
-            = f.text_area :order_number, :class => 'form-control form-control-md'
+            = f.text_field :order_number, :class => 'form-control form-control-md'
         .row
           .col-md-12.form-group
             label Your Message
