--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -1,5 +1,5 @@
 <% if tracker = Spree::Tracker.current %>
-
+  <% @order = order.order %>
   <%= javascript_tag do %>
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', '<%= tracker.analytics_id %>']);
