--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -5,21 +5,20 @@
     _gaq.push(['_setAccount', '<%= tracker.analytics_id %>']);
     _gaq.push(['_trackPageview']);
 
-    <% if flash[:commerce_tracking] && @order.present? %>
-      <% @order = order.order %>
+    <% if flash[:commerce_tracking] && @spree_order.present? %>
       <%# more info: https://developers.google.com/analytics/devguides/collection/gajs/methods/gaJSApiEcommerce %>
       <%# _addTrans(transactionId, affiliation, total, tax, shipping, city, state, country) %>
       _gaq.push(['_addTrans',
-        "<%= j @order.number %>",
+        "<%= j @spree_order.number %>",
         "Fame & Partners",
-        "<%= @order.total %>",
-        "<%= @order.adjustments.tax.sum(:amount) %>",
-        "<%= @order.adjustments.shipping.sum(:amount) %>",
-        "<%= j @order.bill_address.city %>",
-        "<%= j @order.bill_address.state_text %>",
-        "<%= j @order.bill_address.country.name %>"
+        "<%= @spree_order.total %>",
+        "<%= @spree_order.adjustments.tax.sum(:amount) %>",
+        "<%= @spree_order.adjustments.shipping.sum(:amount) %>",
+        "<%= j @spree_order.bill_address.city %>",
+        "<%= j @spree_order.bill_address.state_text %>",
+        "<%= j @spree_order.bill_address.country.name %>"
       ]);
-      <% @order.line_items.each do |line_item| %>
+      <% @spree_order.line_items.each do |line_item| %>
         <%
           # _addItem(transactionId, sku, name, category, price, quantity)
           range_taxon   = range_taxon_for(line_item.variant.product)
@@ -28,7 +27,7 @@
           sku = line_item.variant.product.sku if sku.blank?
         %>
         _gaq.push(['_addItem',
-          "<%= j @order.number %>",
+          "<%= j @spree_order.number %>",
           "<%= j sku %>",
           "<%= j line_item.variant.product.name %>",
           "<%= j category_name %>",
@@ -50,15 +49,15 @@
   <% end %>
 <% end %>
 
-<% if flash[:commerce_tracking] && @order.present? %>
-  <!-- img src="<%= Marketing::RakutenTracker.new(@order, current_site_version).url %>" /-->
+<% if flash[:commerce_tracking] && @spree_order.present? %>
+  <!-- img src="<%= Marketing::RakutenTracker.new(@spree_order, current_site_version).url %>" /-->
   <%= render :partial => 'spree/shared/rakuten' %>
   <%= render :partial => 'spree/shared/customerio' %>
 <% end %>
 
 <%# fb tracking pixel %>
 <% if flash[:commerce_tracking] %>
-  <%= fb_analytics_track('6013645244896', 'AUD', @order.display_item_total) %>
+  <%= fb_analytics_track('6013645244896', 'AUD', @spree_order.display_item_total) %>
 
   <script src="//platform.twitter.com/oct.js" type="text/javascript" />
   <script type="text/javascript">
