[feat][views] add admin link to sku generation

--- a/app/views/admin/sku_generations/show.html.slim
+++ b/app/views/admin/sku_generations/show.html.slim
@@ -1,3 +1,5 @@
+= render :partial => 'spree/admin/shared/product_sub_menu'
+
 h2 SKU Generation & Comparison Tool
 
 p Upload a CSV for SKU Generation in the following format.
