--- a/app/views/spree/admin/shared/_product_sub_menu.html.erb
+++ b/app/views/spree/admin/shared/_product_sub_menu.html.erb
@@ -6,5 +6,6 @@
     <%= tab :prototypes %>
     <%= tab :product_positions %>
     <%= tab :styles %>
+    <%= tab :sku_generation, :url => '/admin/sku_generation' %>
   </ul>
 <% end %>
