--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -336,3 +336,45 @@
   }
 
 }
+
+
+.vex-theme-flat-attack.email-capture-modal.fame-in-future-popup {
+  .vex-content {
+    text-align: center;
+    border: 0;
+    background: image-url('_popups/fame-in-future.jpg') center center no-repeat;
+    background-size: cover;
+    height: 400px;
+    width: 700px;
+    color: #fff;
+    
+    &:before {
+      content: '';
+      display: inline-block;
+      vertical-align: middle;
+      width: 1px;
+      margin-left: -1px;
+      height: 100%;
+    }
+
+    h2 {
+      background-color: transparent;
+      font-size: 5.9rem;
+      line-height: 1.1;
+      color: #fff;
+      font-weight: 400;
+      font-family: Forum !important;
+    }
+    h3 {
+      font-size: 3.1rem;
+      text-transform: uppercase;
+    }
+    p {
+      font-size: 2.2rem;
+    }
+  }
+  .vex-dialog-message, .vex-dialog-form {
+    display: inline-block;
+    vertical-align: middle;
+  }
+}
