[tweak]: add alt tags to edits slides

--- a/app/views/landing_pages/bridesmaids.html.slim
+++ b/app/views/landing_pages/bridesmaids.html.slim
@@ -5,19 +5,19 @@
   ul.rslides
 
     li
-      = image_tag "edits/BRIDESMAIDS/1_171114_F&P_-BRIDESMAIDS_Shot_2_129.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/BRIDESMAIDS/1_171114_F&P_-BRIDESMAIDS_Shot_2_129.jpg", alt: ' Carissa', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/BRIDESMAIDS/2_171114_F&P_-BRIDESMAIDS_Shot_1_006.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/BRIDESMAIDS/2_171114_F&P_-BRIDESMAIDS_Shot_1_006.jpg", alt: 'Glacier', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/BRIDESMAIDS/3_171114_F&P_-BRIDESMAIDS_Shot_3_211.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/BRIDESMAIDS/3_171114_F&P_-BRIDESMAIDS_Shot_3_211.jpg", alt: 'Izzie and Jamie', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/BRIDESMAIDS/4_171114_F&P_-BRIDESMAIDS_Shot_3_230-1.jpg", alt: 's', class: 'img-responsive portrait-img'
+      = image_tag "edits/BRIDESMAIDS/4_171114_F&P_-BRIDESMAIDS_Shot_3_230-1.jpg", alt: 'Gemma Two Piece and Camila Two Piece', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/BRIDESMAIDS/5_171114_F&P_-BRIDESMAIDS_Shot_4_299.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/BRIDESMAIDS/5_171114_F&P_-BRIDESMAIDS_Shot_4_299.jpg", alt: 'Rylie', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/BRIDESMAIDS/6_171114_F&P_-BRIDESMAIDS_Shot_5_378.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/BRIDESMAIDS/6_171114_F&P_-BRIDESMAIDS_Shot_5_378.jpg", alt: 'Hayley Two Piece and Pippa', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/BRIDESMAIDS/7_171114_F&P_-BRIDESMAIDS_Shot_8_635.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/BRIDESMAIDS/7_171114_F&P_-BRIDESMAIDS_Shot_8_635.jpg", alt: 'Anabelle Two Piece', class: 'img-responsive portrait-img'
     li
       = image_tag "edits/BRIDESMAIDS/8_171114_F&P_-BRIDESMAIDS_Shot_6_472.jpg", alt: '', class: 'img-responsive portrait-img'
 
