--- a/app/views/landing_pages/prom.html.slim
+++ b/app/views/landing_pages/prom.html.slim
@@ -4,23 +4,23 @@
   ul.rslides
 
     li
-      = image_tag "edits/real_prom/1.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/1.jpg", alt: 'Clarissa Two Piece', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/2.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/2.jpg", alt: 'Penelope and Head Over Heels', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/3.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/3.jpg", alt: 'Mesh Debutante', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/4.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/4.jpg", alt: 'Lace Rebel and Solace', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/5.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/5.jpg", alt: 'Ethereal Cross and Mesh Belle', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/6.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/6.jpg", alt: 'Lace Rebel', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/7.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/7.jpg", alt: 'Gem Two Piece', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/8.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/8.jpg", alt: 'Ethereal Cross', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/9.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/9.jpg", alt: 'Essie Two Piece and Head Over Heels', class: 'img-responsive portrait-img'
 
   .page-content.products-collections.category
     .container.relative.products-collection
