--- a/app/views/landing_pages/wicked_game.html.slim
+++ b/app/views/landing_pages/wicked_game.html.slim
@@ -2,29 +2,29 @@
 
 .page-content.index.amfam
   ul.rslides
-  
+
     li
-      = image_tag "edits/AMFAM/1F&PAMFAM.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/1F&PAMFAM.jpg", alt: 'Cindy', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/2_141223_F&P_ALLMYFRIENDSAREMODELS_12_0928.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/2_141223_F&P_ALLMYFRIENDSAREMODELS_12_0928.jpg", alt: 'Eva Two Piece', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/3_141223_F&P_ALLMYFRIENDSAREMODELS_03_0959.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/3_141223_F&P_ALLMYFRIENDSAREMODELS_03_0959.jpg", alt: 'Kate', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/4_141223_F&P_ALLMYFRIENDSAREMODELS_05_0311.jpg", alt: 's', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/4_141223_F&P_ALLMYFRIENDSAREMODELS_05_0311.jpg", alt: 'Gisele', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/5_141223_F&P_ALLMYFRIENDSAREMODELS_08_0600-1.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/5_141223_F&P_ALLMYFRIENDSAREMODELS_08_0600-1.jpg", alt: 'Heidi', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/6_141223_F&P_ALLMYFRIENDSAREMODELS_08_0625.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/6_141223_F&P_ALLMYFRIENDSAREMODELS_08_0625.jpg", alt: 'Heidi', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/7_141223_F&P_ALLMYFRIENDSAREMODELS_06_0348.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/7_141223_F&P_ALLMYFRIENDSAREMODELS_06_0348.jpg", alt: 'Coco Two Piece', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/8_141223_F&P_ALLMYFRIENDSAREMODELS_07_0474.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/8_141223_F&P_ALLMYFRIENDSAREMODELS_07_0474.jpg", alt: 'Elle', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/9_141223_F&P_ALLMYFRIENDSAREMODELS_09_0682i.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/9_141223_F&P_ALLMYFRIENDSAREMODELS_09_0682i.jpg", alt: 'Naomi', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/10_141223_F&P_ALLMYFRIENDSAREMODELS_11_0770c.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/10_141223_F&P_ALLMYFRIENDSAREMODELS_11_0770c.jpg", alt: 'Daria', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/AMFAM/11_141223_F&P_ALLMYFRIENDSAREMODELS_10_0718.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/AMFAM/11_141223_F&P_ALLMYFRIENDSAREMODELS_10_0718.jpg", alt: 'Chanel', class: 'img-responsive portrait-img'
     li
       = image_tag "edits/AMFAM/12_141223_F&PAMFAM_SHOT_2_1916.jpg", alt: '', class: 'img-responsive portrait-img'
 
