[fix] hide email capture form for graduation modal

--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -376,5 +376,8 @@
   .vex-dialog-message, .vex-dialog-form {
     display: inline-block;
     vertical-align: middle;
+    .vex-dialog-input {
+      display: none;
+    }
   }
 }
