markup new mailer design

--- a/app/views/layouts/mailer.html.slim
+++ b/app/views/layouts/mailer.html.slim
@@ -11,22 +11,24 @@ html style="background: #fff none repeat scroll 0% 0%;"
       .footer-text { color: #333; font: 400 12px/1.2 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif; text-align: center }
       .footer-text a { color: #333; text-decoration: none; }
 
-  body yahoo="fix" style="margin: 0pt; padding: 0pt; background: #fff none repeat scroll 0% 0%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; color: #000;"
+  body yahoo="fix" style="margin: 0; padding: 0; background: #fff; color: #000;"
 
     table align="center" border="0" cellpadding="0" cellspacing="0" width="682"
       tbody
         tr
-          td style="background: #fff none repeat scroll 0% 50%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial;" valign="top"
+          td style="background-color: #fff;" valign="top"
             table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
               tbody
                 tr
-                  td height="21" bgcolor="#000"                    
-                tr
-                  td height="21"
-                tr
-                  td.logo style="text-align: center;"
-                    a href="#{ main_app.root_url }"
-                      img src="http://www.fameandpartners.com/images/email/logo-new.png" width="130" height="95" alt="Fame&Partners" style="border: 0;"
+                  table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
+                    tr
+                      td
+                        img src="http://localhost:3000/assets/_email/header-left.jpg" width="113" height="167" alt="" style="border: 0;"
+                      td.logo style="text-align: center;"
+                        a href="#{ main_app.root_url }"
+                          img src="http://www.fameandpartners.com/assets/new-logo.svg" width="330" alt="Fame&Partners" style="border: 0;"
+                      td
+                        img src="http://localhost:3000/assets/_email/header-right.jpg" width="168" height="167" alt="" style="border: 0;"
                 tr
                   td height="21"
                 tr
@@ -38,12 +40,65 @@ html style="background: #fff none repeat scroll 0% 0%;"
                         tr
                           td style="background: #fff; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif; color: #666;"
                             = yield
+                
+                / Footer
                 tr
                   td height="21"
                 tr
                   td.logo style="text-align: center;"
                     a href="http://fameandpartners.com"
-                      img src="http://fameandpartners.com/images/email/logo-small-new.png" width="140" height="101" alt="Fame&Partners" style="border: 0;"
+                      img src="http://localhost:3000/assets/_email/footer-logo.jpg" width="199" alt="Fame&Partners" style="border: 0;"
+                tr
+                  td height="21"
+                tr
+                  td style="text-transform: uppercase;" bgcolor="#1a1a1a"
+                    table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
+                      tr
+                        td colspan="10" height="15"
+                      tr
+                        td width="15"
+                        / Twitter
+                        td style="text-align: center;"
+                          a href="http://twitter.com/fameandpartners" style="color: #fff; font: 400 12px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif; text-decoration: none"
+                            img src="http://localhost:3000/assets/_email/twitter.png" width="30" height="30" style="border: 2px solid #000; border-radius: 100%; margin-bottom: 5px;" alt="Fame&Partners on Twitter"
+                            br
+                            span 
+                              | @famepartners
+
+                        / Facebook
+                        td style="text-align: center;"
+                          a href="http://facebook.com/fameandpartners" style="color: #fff; font: 400 12px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif; text-decoration: none"
+                            img src="http://localhost:3000/assets/_email/facebook.png" width="30" height="30" style="border: 2px solid #000; border-radius: 100%; margin-bottom: 5px;" alt="Fame&Partners on Facebook"
+                            br
+                            span 
+                              | /famepartners
+                        
+                        / Instagram
+                        td style="text-align: center;"
+                          a href="http://instagram.com/fameandpartners" style="color: #fff; font: 400 12px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif; text-decoration: none"
+                            img src="http://localhost:3000/assets/_email/instagram.png" width="30" height="30" style="border: 2px solid #000; border-radius: 100%; margin-bottom: 5px;" alt="Fame&Partners on Instagram"
+                            br
+                            span 
+                              | @famepartners
+
+                        / Google
+                        / td style="text-align: center;"
+                        /   a href="https://plus.google.com/b/117433562249244184743/117433562249244184743/about/p/pub" style="color: #fff; font: 400 12px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif; text-decoration: none"
+                        /     img src="http://fameandpartners.com/images/email/google.png" width="30" height="30" style="border: 0;" alt="Fame&Partners on Google+"
+                        /     br
+                        /     span 
+                        /       | @famepartners
+
+                        / Pinterest
+                        td style="text-align: center;"
+                          a href="http://pinterest.com/fameandpartners/" style="color: #fff; font: 400 12px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif; text-decoration: none"
+                            img src="http://localhost:3000/assets/_email/pinterest.png" width="30" height="30" style="border: 2px solid #000; border-radius: 100%; margin-bottom: 5px;" alt="Fame&Partners on Pinterest"
+                            br
+                            span 
+                              | @famepartners
+                        td width="15"
+                      tr
+                        td colspan="10" height="15"
                 tr
                   td height="21"
                 tr
@@ -53,19 +108,10 @@ html style="background: #fff none repeat scroll 0% 0%;"
                       a href="mailto:team@fameandpartners.com" style="color: #333; text-decoration: none;" team@fameandpartners.com
                     div Fame & Partners PTY LTD
                     div Bondi, NSW, Australia
-                    div 1300 924 860
-                tr
-                  td height="21"
-                tr
-                  td style="text-align: center;"
-                    a href="http://twitter.com/fameandpartners" style="margin: 0 11px;"
-                      img src="http://fameandpartners.com/images/email/twitter.png" width="22" height="20" style="border: 0;" alt="Fame&Partners on Twitter"
-                    a href="http://facebook.com/fameandpartners" style="margin: 0 11px;"
-                      img src="http://fameandpartners.com/images/email/facebook.png" width="12" height="24" style="border: 0;" alt="Fame&Partners on Facebook"
-                    a href="https://plus.google.com/b/117433562249244184743/117433562249244184743/about/p/pub" style="margin: 0 11px;"
-                      img src="http://fameandpartners.com/images/email/google.png" width="29" height="26" style="border: 0;" alt="Fame&Partners on Google+"
-                    a href="http://pinterest.com/fameandpartners/" style="margin: 0 11px;"
-                      img src="http://fameandpartners.com/images/email/pinterest.png" width="25" height="25" style="border: 0;" alt="Fame&Partners on Pinterest"
+                    div style="text-transform: uppercase;"
+                      a href="http://fameandpartners.com/help" Customer Service 
+                      span
+                        ' | 1300 924 860
                 tr
                   td height="21"
           td width="10"
