--- a/app/views/spree/order_mailer/confirm_email.html.slim
+++ b/app/views/spree/order_mailer/confirm_email.html.slim
@@ -1,12 +1,10 @@
 table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
   tbody
     tr
-      td width="38"
+      td width="15"
       td
         table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
           tbody
-            tr
-              td height="27"
             tr
               td.date style="color: #999; font: 400 12px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 = Date.today.to_formatted_s(:long)
@@ -20,7 +18,8 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
             tr
               td style="color: #666; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 p style="margin: 0 0 20px;" Hi #{@order.full_name},
-                p style="margin: 0;" Thanks for shopping with Fame & Partners. Your order is being processed, and we'll send you another email to confirm when it has been shipped.
+                p style="margin: 0;" 
+                  | Thanks for shopping with Fame & Partners. Your order is being processed, and we'll send you another email to confirm when it has been shipped.
             tr
               td height="30"
             tr
@@ -69,4 +68,4 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
                 span style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" 1300 924 860
             tr
               td height="27"
-      td width="38"
+      td width="15"
