--- a/app/views/spree/admin/orders/_shipment_tracking_number_form.html.slim
+++ b/app/views/spree/admin/orders/_shipment_tracking_number_form.html.slim
@@ -1,11 +1,6 @@
 - if shipment = line_item.shipment
   - if shipment.shipped?
-    - if shipment.tracking
-      td = link_to(shipment.tracking || '???', shipment.tracking_url, target: '_blank')
-    - else
-      td No Number
-    td
-      abbr title=shipment.shipped_at = l(shipment.shipped_at.to_date)
+    = render partial: 'shipped_shipment_cells', locals: { shipment: shipment }
   - elsif shipment.order.can_ship?
     = form_for shipment, url: "/admin/fabrications/#{line_item.id}", remote: true, class: 'shipment_tracking_number_form' do |f|
       td
@@ -18,7 +13,6 @@
   - else
     td = shipment.state.capitalize
     td = shipment.order.shipment_state.capitalize
-
 - else
   td colspan=2
     ' No Shipment defined
