[fix] Update returns policy

--- a/app/views/statics/_returns.html.slim
+++ b/app/views/statics/_returns.html.slim
@@ -17,7 +17,7 @@ ol
   
   li  For any discounted items, we charge a $14.95 restocking fee when returned for a refund.
   
-  li   We cannot refund sale items that have been discounted over 50%.
+  li   We cannot refund sale items that have been discounted 50% or more.
   
   li   For any items discounted to under $149.00, you will be responsible for covering the cost of the return.
   
