--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -22,6 +22,8 @@
           = link_to 'Get styling advice', style_consultation_path
         li.footer-nav--item
           = link_to 'Fame Chain', fame_chain_path
+        li.footer-nav--item
+          = link_to 'Contact Us', new_contact_path
 
   .lower-row
     .col-md-3.col-sm-8
