minor formatting fame-in-future-popup

--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -366,11 +366,14 @@
       font-family: Forum !important;
     }
     h3 {
-      font-size: 3.1rem;
+      font-size: 2.8rem;
       text-transform: uppercase;
+      padding-left: 15px;
+      padding-right: 15px;
     }
     p {
-      font-size: 2.2rem;
+      font-size: 2.6rem;
+      margin-top: 10px;
     }
   }
   .vex-dialog-message, .vex-dialog-form {
